		during login (and maybe in other situations).
		Fixed chat debug logging to only the debug.log file.

	mbfile:
		When the areanumber with the adopt command was not given, the
		help is displayed instead of trying area 0 that doesn't exist.
		With the file move command if the file already exists in the
		destination area, the move is refused.

	mbcico:
		Added hydra rpos id -1 indicator for compression stop that
		Alex and I agreed to use.
		Compression log fixed and added percentage compression.
		Added dynamic optimum sendbuffer size with a maximum of 8192
		bytes with an average size of 2048 bytes.

	mbsetup:
		In node editor, fixed error message when there was no more
		room for new nodes to point to the right menus.
		Added support for tar compressed archives.
		Changed all fidonet domain names to maximum 8 characters so
		that we now follow the FTSC specs.


v0.39.0		09-Oct-2003 - 22-Oct-2003

	general:
		Added menu setup switches for doors: Singe user door and
		hidden from lists.

	mbsebbs:
		The whoson list displays the doorname if set in the menus.
		If a door is single user and the door is in use, the second
		user can't start the door but gets a message about this
		situation.

	mbsetup:
		Added menu settings for single user door and hide door. Added
		setting for the door name in the menus and removed the never
		used password for the menu (Was only present in the setup).

	mbcico:
		Added Hydra zlib compressed data blocks using the idea of Alex
		Shakhaylo. This is experimental and looks compatible with
		mailers that don't support this option. The compression will
		transfer some files about twice as fast as without compression.
		Changed signal handlers to better detect broken TCP links.
		Added logging to show compressed bytes and switched to compress
		level 9 compression instead of 6.
		Prepared hydra for large compressed data blocks. In the next
		developmement version we will actually start using these