@@ -1,6 +1,6 @@
 /* $Id$ */
 
-#ifndef _MBFPACK_H_
+#ifndef _MBFPACK_H
 #define _MBFPACK_H
 
 void	PackFileBase(void);		/* Pack / Compress File Base	*/
