@@ -1,0 +1,8 @@
+/* $Id$ */
+
+#ifndef _MBFSORT_H
+#define _MBFSORT_H
+
+void	SortFileBase(int);		/* Sort File Base	*/
+
+#endif
